--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "node-telegram-bot-api": "^0.61.0"
   }
